--- a/admin/package.json
+++ b/admin/package.json
@@ -8,9 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tiptap/extension-document": "^2.11.9",
+    "@tiptap/extension-placeholder": "^2.11.9",
+    "@tiptap/extension-text-align": "^2.11.9",
+    "@tiptap/extension-underline": "^2.11.9",
+    "@tiptap/pm": "^2.11.9",
+    "@tiptap/starter-kit": "^2.11.9",
+    "@tiptap/vue-2": "^2.11.9",
     "axios": "^1.9.0",
     "core-js": "^3.8.3",
+    "slugify": "^1.6.6",
     "vue": "^2.6.14",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.6.5",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
