--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "json-server": "1.0.0-beta.3"
+  },
   "devDependencies": {
     "concurrently": "^9.1.2"
   }
